using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class TagManager
{
    public static string HORIZONTAL_AXIS = "Horizontal";

    public static string PLAYER_MOVE_SPEED_ANIM_PARAMETR = "moveSpeed";
    public static string PLAYER_Y_VELOCITY_ANIM_PARAMETR = "yVel";
    public static string PLAYER_IS_GROUNDED_ANIM_PARAMETR = "isGrounded";

    public static string PLAYER_TAG = "Player";
    public static string CHECK_POINT_TAG = "CheckPoint";
    public static string MOVING_PLATFORM_TAG = "MovingPlatform";
    public static string ENEMY_TAG = "Enemy";
    public static string DOOR_TAG = "Door";
    public static string ROTATE_BOSS_OBG = "RotateBossObg";

    public static string ENEMY_DEAD_ANIM_NAME = "Dead";
    public static string ENEMY_SHOOT_TRIGGER = "Shoot";

    public static string SCENE_BOSS_FIGHT = "BossFight";

    public static string MAIN_MENU_SCENE_NAME = "MainMenu";
    public static string LEVEL_1_SCENE_NAME = "Level1";


}
